--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>shotaro.github.io by shotaro</title>
+    <title>shotaro aono</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -38,8 +38,6 @@
 <p><a href="http://shotalow.hateblo.jp/">Hatena blog</a></p>
 
 <p><a href="http://qiita.com/shota_low">Qiita</a></p>
-
-<p><a href="https://github.com/shotaro">GitHub</a></p>
 
 <p><a href="https://sumally.com/shotaro">Sumally</a></p>
 
