--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>shotaro.github.io</h1>
+        <h1>shotaro aono</h1>
         <p></p>
 
 
